--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
     * {
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
         box-sizing: border-box;
     }
@@ -13,6 +13,8 @@
         --font-sizeh1-1200: 64px;
         --font-sizeh1-320: 36px;
         --font-sizep-320: 14px;
+        --font-sizep-1200: 16px;
+        --font-sizeh2: 24px;
     }
     
     .relative {
@@ -21,19 +23,44 @@
     }
     
     .button {
-        background-color: green;
+        background-color: #00F3BB;
+        padding: 16px;
+        text-align: center;
+        margin: 16px 0px;
+        font-family: 'IBM Plex Mono', monospace;
+        font-size: 16px;
+        color: #060A24;
+        letter-spacing: 0;
+        text-align: center;
+        line-height: 22px;
+        font-weight: bolder;
+        /*lo que no entiendo aca es porque toma esas 
+        medidas el button si solo les di margin y padding*/
+    }
+    
+    .button:hover {
+        background-color: linear-gradient(225deg, #0000FE, #00F0B8);
         padding: 16px;
         color: white;
         text-align: center;
         margin: 16px 0px;
     }
     
-    .button:hover {
-        background-color: red;
-        padding: 16px;
-        color: black;
-        text-align: center;
-        margin: 16px 0px;
+    h1 {
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-size: var(--font-sizeh1-320);
+        color: #060A24;
+        letter-spacing: 0;
+        line-height: 42px;
+        font-weight: 300px;
+    }
+    
+    p {
+        font-family: 'IBM Plex Mono', monospace;
+        font-size: var(--font-sizep-320);
+        color: #060A24;
+        letter-spacing: 0;
+        line-height: 22px;
     }
     /*-----------seccion 1------------------*/
     
@@ -55,6 +82,119 @@
     
     .desktop-text {
         display: none;
+    }
+    
+    #txt-2 {
+        padding: 16px;
+    }
+    
+    span {
+        text-decoration: line-through;
+    }
+    
+    .mobile-text {
+        margin: 16px;
+    }
+    /*como logro que me queden tres renglones?*/
+    /*--------------------------seccion 3---------------------*/
+    
+    .poligono {
+        width: 100%;
+        height: 1203.5px;
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0% 3%, 100% 0%, 100% 97%, 0% 100%);
+        max-width: 1200px;
+    }
+    
+    .episodios {
+        color: white;
+        padding: 64px 16px 12px;
+        font-weight: lighter;
+    }
+    
+    .podcast {
+        padding: 11px;
+    }
+    /*como hago para que si estiro se estiren?*/
+    /*--------------------------seccion 4-----------------------------*/
+    
+    .seccion4 {
+        padding: 16px;
+    }
+    
+    .img-mobile {
+        width: 100%;
+        max-width: 450px;
+    }
+    
+    .txt2-4 {
+        padding: 16px 0px;
+    }
+    /*--------------------------seccion 5-----------------------------*/
+    
+    .seccion5 {
+        padding: 0;
+    }
+    
+    .txt1-5 {
+        padding: 16px;
+    }
+    
+    .img-seccion5 {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+    /*--------------------------seccion 6-----------------------------*/
+    
+    .seccion6 {
+        padding: 16px;
+    }
+    
+    .img-seccion6 {
+        padding-top: 37px;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .bloque-svg {
+        padding: 13px;
+    }
+    
+    h2 {
+        font-size: var(----font-sizeh2: 24px;
+        );
+        font-family: 'IBM Plex Sans', sans-serif;
+        color: #060A24;
+        letter-spacing: 0;
+        text-align: center;
+    }
+    /*--------------------------seccion 7-----------------------------*/
+    
+    .poligono2 {
+        width: 100%;
+        height: 341px;
+        background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
+        clip-path: polygon(0% 9%, 100% 0%, 100% 100%, 0% 100%);
+        max-width: 1200px;
+    }
+    
+    h1.seccion7 {
+        padding: 64px 16px 28px 16px;
+        color: white;
+        text-align: center;
+        font-weight: lighter;
+    }
+    
+    .poligono2>.button {
+        margin: 16px;
+    }
+    /*-----------------------footer-------------------*/
+    
+    .footer {
+        padding: 16px;
+        display: flex;
+        flex-direction: row;
     }
     /*aca pongo todos los estilos que la vista mobile necesite, el media me sirve para desktop*/
     
