--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
                                             --font-sizeh1-320: 36px;
                                             --font-sizep-320: 14px;
                                             --font-sizep-1200: 16px;
-                                            --font-sizeh2: 20px;
+                                            --font-sizeh2: 24px;
                                         }
                                         
                                         .relative {
@@ -231,11 +231,6 @@
                                             padding: 13px;
                                         }
                                         
-                                        .bloque-svg img {
-                                            width: 104px;
-                                            height: 104px;
-                                        }
-                                        
                                         h2 {
                                             font-size: var(--font-sizeh2);
                                             font-family: 'IBM Plex Sans', sans-serif;
@@ -246,6 +241,7 @@
                                         /*--------------------------seccion 7-----------------------------*/
                                         
                                         #poligono2 {
+                                            display: flex;
                                             width: 100%;
                                             height: 341px;
                                             background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
@@ -256,7 +252,7 @@
                                         }
                                         
                                         .seccion7 {
-                                            padding: 64px 16px 28px 16px;
+                                            padding: 16px;
                                             color: white;
                                             text-align: center;
                                             font-weight: lighter;
@@ -265,8 +261,9 @@
                                         .button2 {
                                             background-color: #00F3BB;
                                             padding: 16px;
+                                            width: 80%;
                                             text-align: center;
-                                            margin: 16px;
+                                            margin-top: 16px;
                                             font-family: 'IBM Plex Mono', monospace;
                                             font-size: 16px;
                                             color: #060A24;
@@ -292,7 +289,7 @@
                                         #footer ul {
                                             display: flex;
                                             justify-content: space-between;
-                                            padding: 1em 2em 0;
+                                            padding: 10px 20px 0px;
                                         }
                                         
                                         #footer i {
@@ -410,30 +407,50 @@
                                                 margin-bottom: 36px;
                                             }
                                             /*-------------------SECCION 6 DESKTOP ICONOS SVG---------*/
-                                            .img-seccion6 {
-                                                display: flex;
-                                                align-items: center;
-                                                margin-left: 220px;
-                                                margin-right: 220px;
+                                            #seccion6 {
+                                                padding: 50px 0px;
                                             }
                                             .txt1-6 {
                                                 margin-left: 200px;
                                                 margin-bottom: 36px;
                                             }
+                                            .img-seccion6 {
+                                                display: flex;
+                                                margin: 0 auto;
+                                                width: 80%;
+                                            }
+                                            .bloque-svg img {
+                                                padding: 20px;
+                                            }
+                                            /*como logro que las imagenes esten más
+                                            juntas?*/
                                             /*-------------------SECCION 7 DESKTOP POLIGONO---------------*/
                                             #poligono2 {
+                                                display: flex;
                                                 height: 518px;
                                                 clip-path: polygon(0% 17%, 100% 0%, 100% 100%, 0% 100%);
                                                 justify-content: center;
                                                 align-items: center;
                                             }
-                                            /*porque no alinea su contenido si esta con 
-                                            justify t align*/
-                                            .seccion7 {
-                                                padding-top: 180px;
-                                            }
                                             .button2 {
                                                 width: 345px;
+                                            }
+                                            /*----------------------------footer-----------*/
+                                            #footer {
+                                                display: flex;
+                                                align-items: center;
+                                            }
+                                            .footer-txt {
+                                                margin-left: 50px;
+                                            }
+                                            #footer ul {
+                                                display: flex;
+                                                justify-content: flex-end;
+                                                padding: 0px;
+                                                margin-right: 50px;
+                                            }
+                                            li {
+                                                padding: 20px;
                                             }
                                         }
                                         /*cierre de media*/
